tdf#153604: include the root element when traversing the tree

Change-Id: I35098e687eea832c075f68861e04be7b492ed25e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146966
Tested-by: Jenkins
Reviewed-by: Kohei Yoshida <kohei@libreoffice.org>
(cherry picked from commit 4d9a8f07b77917b0756dc2d8d8082c6e63e560a2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146982